Updated Styling on Events page. Fixed alignment of Registered Events in userHome

--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -12,9 +12,15 @@
     margin-bottom:10px;
     width:300px;
     padding: 10px;
-    background-color: #eba123;
-    border: 3px solid #e4e000;
+    background-color: #ffca68;
+    border: 3px solid #eba123;
     border-radius: 10px;
+}
+#header{
+    color: #7e4412;
+}
+.row .wrapper{
+    min-height:300px;
 }
 
 @media only screen and (max-width:1239px){
@@ -36,23 +42,30 @@
 
 .event-description{
     font-size:26px;
+    color: #7e4412;
 }
 .event-name{
     font-size:32px;
+    color: #7e4412;
     
 
 }
 
 .event-price{
     font-size:24px;
+    color: #7e4412;
 }
 
 .event-date{
     font-size:20px;
+    color: #7e4412;
 }
 .event-img{
-    margin-top:10px;
-    height:320px;
+    margin-top:35px;
+    height:220px;
+    width:400px;
+    border: 4px solid #eba123;
+    border-radius:6px;
 }
 
 .event-buttons{
@@ -62,13 +75,22 @@
 
 .event-button{
     font-size:20px;
-    background-color:#ffca68;
-    border: 3px solid #e4e000;
+    background-color:#eba123;
+    border: 3px solid #eba123;
     border-radius:10px;
     margin-bottom:10px;
     padding:8px;
     color: #7e4412;
     text-decoration: none;
+}
+
+.event-button:hover{
+    background-color:#ffca68;
+}
+
+.event-button-registered{
+    background-color:#ffca68;
+    border: 3px solid #eba123;
 }
 
 .event-button:hover{
@@ -91,8 +113,8 @@ img {
   
     .wrapper{
         margin:10px;
-        background-color: #eba123;
-        border: 3px solid #e4e000;
+        background-color: #ffca68;
+        border: 3px solid #eba123;
         border-radius:8px;
         
     }
