--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -10,6 +10,8 @@ nav{
     margin-top:40px;
 }
 
+
+
 /*Login Buttons*/
 .navbar-items{
     background: rgba(0,0,0,0);
@@ -29,10 +31,13 @@ nav{
 
 #header{
     font-size:100px;
+    color: #7e4412;
 }
+
+@media only screen and (max-width: 520px) {
 
 /*Home Body*/
-.logo{
-    max-height:500px;
+#header{
+    font-size:80px;
 }
-
+}
