--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -78,16 +78,14 @@
   }
   .submit-button, input[type="submit"], textarea{
     text-transform: uppercase;
-    outline: 0;
-    background-color: #ffca68;
-    width: 100%;
-    border: 0;
-    padding: 15px;
+    /* outline: 0; */
+    /* border: 0; */
     color: #eba123;
-    font-size: 18px;
+    font-size: 20px;
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
-    cursor: pointer;
+    /* cursor: pointer; */
+    height: 50px;
   }
   
   ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
